[gd_scene load_steps=42 format=3 uid="uid://vg72e433ggrx"]

[ext_resource type="Material" uid="uid://c5n8hh7lc1h4b" path="res://materials/base_material_3d.tres" id="2_pu3yx"]
[ext_resource type="Script" uid="uid://co3y5aldsk5jh" path="res://scripts/level.gd" id="3_c16ls"]
[ext_resource type="Texture2D" uid="uid://b0r6xam3j6ui2" path="res://textures/backgrounds/background_beginning.jpg" id="4_c1pb6"]
[ext_resource type="PackedScene" uid="uid://xqds4eqa4fys" path="res://scenes/section.tscn" id="4_gubc5"]
[ext_resource type="PackedScene" uid="uid://durrtmu3i450r" path="res://scenes/player.tscn" id="4_pu3yx"]
[ext_resource type="PackedScene" uid="uid://b3j6kki1bc2xs" path="res://scenes/boss_section.tscn" id="5_si52b"]
[ext_resource type="Script" uid="uid://cldevqp1odjtl" path="res://scripts/hud.gd" id="7_c16ls"]
[ext_resource type="PackedScene" uid="uid://cj100dmxx12lt" path="res://scenes/lava.tscn" id="7_r6p65"]
[ext_resource type="StyleBox" uid="uid://bx8skthds5uiu" path="res://scenes/inventory/main_scene.tres" id="9_6u1mn"]
[ext_resource type="Material" uid="uid://bq68gffx25aw4" path="res://materials/backgrounds/bg_first.tres" id="9_7nt27"]
[ext_resource type="Material" uid="uid://dohoucrjnnkwp" path="res://materials/backgrounds/bg_afterfirst.tres" id="9_bcnxi"]
[ext_resource type="PackedScene" uid="uid://bip40vv31g12d" path="res://scenes/inventory/inv_ui.tscn" id="9_c1pb6"]
[ext_resource type="Script" uid="uid://cau06s0ctjwx8" path="res://scripts/upgrades.gd" id="10_6wevv"]
[ext_resource type="Script" uid="uid://dhv52dohn5s4r" path="res://scripts/death_screen.gd" id="10_e1cbu"]
[ext_resource type="PackedScene" uid="uid://d0ykw70micab6" path="res://scenes/boss.tscn" id="11_e1cbu"]
[ext_resource type="Script" uid="uid://dx1hxd4wnymb1" path="res://scripts/boss_dialog_ui.gd" id="12_mngbo"]
[ext_resource type="PackedScene" uid="uid://b87oo8x46lj3r" path="res://scenes/cheats.tscn" id="13_4w45t"]
[ext_resource type="PackedScene" uid="uid://dyotcvyxjphy2" path="res://scenes/ui/inventory_menu.tscn" id="14_4bgka"]
[ext_resource type="Script" uid="uid://bjp67tva3ov6n" path="res://scripts/fps_counter.gd" id="14_r6p65"]
[ext_resource type="PackedScene" uid="uid://ct6stnjvli7ll" path="res://scenes/ui/pause_menu.tscn" id="17_k3g67"]
[ext_resource type="PackedScene" uid="uid://b35mxcc3d74di" path="res://scenes/WaterPlane.tscn" id="20_k6f3i"]
[ext_resource type="ArrayMesh" uid="uid://gw7pdmvoe3yh" path="res://meshes/gestein_v003.obj" id="21_to7gp"]
[ext_resource type="Script" uid="uid://d1aerdanr4q2e" path="res://scripts/soundplayer.gd" id="21_xdqt8"]
[ext_resource type="Script" uid="uid://q0tu1in7y6pf" path="res://scripts/musicplayer.gd" id="22_k67gn"]
[ext_resource type="Material" uid="uid://dv7qrtiq87nj0" path="res://materials/walls/walls.tres" id="22_u0fll"]
[ext_resource type="ArrayMesh" uid="uid://c54e8dk8jsryd" path="res://meshes/vains_v003.obj" id="23_6p3nn"]
[ext_resource type="PackedScene" uid="uid://cu74jh81r7l20" path="res://meshes/dock_3_remesh.tscn" id="23_k3g67"]
[ext_resource type="Material" uid="uid://bupgrlcbs4i6k" path="res://materials/walls/veins.tres" id="24_k67gn"]

[sub_resource type="QuadMesh" id="QuadMesh_c16ls"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6wevv"]
albedo_texture = ExtResource("4_c1pb6")

[sub_resource type="TorusMesh" id="TorusMesh_o3jxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6u1mn"]
bg_color = Color(0, 0.360784, 0.831373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_18nlu"]
Button/styles/normal = null
PanelContainer/styles/panel = ExtResource("9_6u1mn")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_6u1mn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subway"]
bg_color = Color(0.05, 0.2, 0.3, 0.85)
border_width_top = 3
border_color = Color(0.105882, 0.85098, 0.917647, 0.8)
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_digital"]
bg_color = Color(0.066, 0.132, 0.2, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.105882, 0.85098, 0.917647, 0.4)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bar_bg"]
bg_color = Color(0.05, 0.05, 0.05, 0.7)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.105882, 0.85098, 0.917647, 0.3)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k3g67"]
content_margin_top = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4bgka"]
content_margin_top = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3g67"]
render_priority = 1
transparency = 1
albedo_color = Color(0.0627451, 0.243137, 0.368627, 0.862745)

[sub_resource type="BoxShape3D" id="BoxShape3D_4bgka"]
size = Vector3(4.19824, 19.4489, 13.8901)

[sub_resource type="QuadMesh" id="QuadMesh_k67gn"]

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.94702, 0.320556, -0.0199305, -0.0267635, 0.140602, 0.989704, 0.320058, -0.936736, 0.141732, -6.47082, 1.04463, 15.1856)

[node name="CharacterBody3D" parent="." instance=ExtResource("4_pu3yx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -0.177934, -0.33)
speed_vertical = 0.5
speed_horizontal = 0.5

[node name="SoundPlayer" type="AudioStreamPlayer3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.258023, 0, 0.33)
script = ExtResource("21_xdqt8")

[node name="player" type="AudioStreamPlayer2D" parent="CharacterBody3D/SoundPlayer"]
volume_db = -11.876

[node name="Level" type="Node3D" parent="." node_paths=PackedStringArray("level_wrapper", "player")]
script = ExtResource("3_c16ls")
section = ExtResource("4_gubc5")
level_wrapper = NodePath(".")
player = NodePath("../CharacterBody3D")
boss = ExtResource("11_e1cbu")
boss_section = ExtResource("5_si52b")
sectionHeight = 25.0
preloadSectionsCount = 2

[node name="StartSection" type="Node3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
visible = false

[node name="Background" type="MeshInstance3D" parent="Level/StartSection"]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 1, -15.8629, 0, -3.00963)
mesh = SubResource("QuadMesh_c16ls")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_6wevv")

[node name="Base" type="MeshInstance3D" parent="Level/StartSection"]
transform = Transform3D(1, 0, 0, 0, 5, 0, 0, 0, 1, 0.0526396, 13.6304, -1.26619)
material_override = ExtResource("2_pu3yx")
mesh = SubResource("TorusMesh_o3jxj")
skeleton = NodePath("../../..")

[node name="Lava" parent="Level/StartSection" instance=ExtResource("7_r6p65")]
transform = Transform3D(0.538622, 0, 0, 0, 4.32167, 0, 0, 0, 1, -19.2295, 0.180141, -2.69743)

[node name="Lava2" parent="Level/StartSection" instance=ExtResource("7_r6p65")]
transform = Transform3D(2.45308, 0, 0, 0, 1.62324, 0, 0, 0, 1, -20.4469, -3.0248, -2.69743)

[node name="FirstSection" parent="Level" instance=ExtResource("4_gubc5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
background_mat = ExtResource("9_7nt27")
particles_enabled = false

[node name="SecondSection" parent="Level" instance=ExtResource("4_gubc5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -35, 0)
background_mat = ExtResource("9_bcnxi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_18nlu")

[node name="inv_ui" parent="UI" instance=ExtResource("9_c1pb6")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -227.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 156.0
grow_horizontal = 0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryMenu" parent="UI/CenterContainer" instance=ExtResource("14_4bgka")]
layout_mode = 2

[node name="BossDialog" type="PanelContainer" parent="UI/CenterContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("12_mngbo")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/BossDialog"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="UI/CenterContainer/BossDialog/VBoxContainer"]
layout_mode = 2

[node name="ProfilePicture" type="TextureRect" parent="UI/CenterContainer/BossDialog/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="UI/CenterContainer/BossDialog/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Blobfish:"

[node name="MessageLabel" type="RichTextLabel" parent="UI/CenterContainer/BossDialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "Oh nooo, you died!
Anyways... Lets keep going - we don't have all day!"
fit_content = true
scroll_following = true

[node name="ContinueButton" type="Button" parent="UI/CenterContainer/BossDialog/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Upgrades" type="PanelContainer" parent="UI/CenterContainer"]
layout_mode = 2
script = ExtResource("10_6wevv")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/Upgrades"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/CenterContainer/Upgrades/VBoxContainer"]
layout_mode = 2
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/CenterContainer/Upgrades/VBoxContainer"]
layout_mode = 2

[node name="DeathScreen" type="PanelContainer" parent="UI/CenterContainer"]
layout_mode = 2
script = ExtResource("10_e1cbu")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/DeathScreen"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/CenterContainer/DeathScreen/VBoxContainer"]
layout_mode = 2
text = "Oh nooo, you died!
Anyways... Lets keep going - we don't have all day!"

[node name="Button" type="Button" parent="UI/CenterContainer/DeathScreen/VBoxContainer"]
layout_mode = 2
text = "Respawn
"

[node name="PauseMenu" parent="UI/CenterContainer" instance=ExtResource("17_k3g67")]
layout_mode = 2

[node name="HUD" type="PanelContainer" parent="UI"]
z_index = -1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_subway")
script = ExtResource("7_c16ls")

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HUDContainer" type="HBoxContainer" parent="UI/HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HealthInfo" type="PanelContainer" parent="UI/HUD/MarginContainer/HUDContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_digital")

[node name="HealthBar" type="ProgressBar" parent="UI/HUD/MarginContainer/HUDContainer/HealthInfo"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_bar_bg")
value = 100.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer/HUDContainer/HealthInfo"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HealthLabel" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/HealthInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_k3g67")
text = "SUBMARINE INTEGRITY"
horizontal_alignment = 1

[node name="StageInfo" type="PanelContainer" parent="UI/HUD/MarginContainer/HUDContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_digital")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer/HUDContainer/StageInfo"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="StageLabel" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/StageInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 14
text = "CURRENT ZONE"
horizontal_alignment = 1

[node name="StageValue" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/StageInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.85098, 0.917647, 1)
theme_override_font_sizes/font_size = 24
text = "OCEAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepthInfo" type="PanelContainer" parent="UI/HUD/MarginContainer/HUDContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_digital")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer/HUDContainer/DepthInfo"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="DepthLabel" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/DepthInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 14
text = "DEPTH"
horizontal_alignment = 1

[node name="DepthValue" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/DepthInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.85098, 0.917647, 1)
theme_override_font_sizes/font_size = 24
text = "0m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxDepthInfo" type="PanelContainer" parent="UI/HUD/MarginContainer/HUDContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_digital")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer/HUDContainer/MaxDepthInfo"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="MaxDepthLabel" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/MaxDepthInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 14
text = "MAX DEPTH"
horizontal_alignment = 1

[node name="MaxDepthValue" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/MaxDepthInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.85098, 0.917647, 1)
theme_override_font_sizes/font_size = 24
text = "0m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressureInfo" type="PanelContainer" parent="UI/HUD/MarginContainer/HUDContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_digital")

[node name="PressureBar" type="ProgressBar" parent="UI/HUD/MarginContainer/HUDContainer/PressureInfo"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_bar_bg")
value = 100.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer/HUDContainer/PressureInfo"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PressureLabel" type="Label" parent="UI/HUD/MarginContainer/HUDContainer/PressureInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_4bgka")
text = "PRESSURE SYSTEM"
horizontal_alignment = 1

[node name="Cheats" parent="UI" instance=ExtResource("13_4w45t")]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 40.0
offset_right = 624.0
offset_bottom = 216.0

[node name="FPS Counter" type="Label" parent="UI"]
layout_mode = 2
offset_left = 220.0
offset_top = 10.0
offset_right = 409.0
offset_bottom = 33.0
text = "FPS"
script = ExtResource("14_r6p65")

[node name="Audiomanager" type="Node" parent="."]
script = ExtResource("22_k67gn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audiomanager"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audiomanager"]

[node name="dock3_remesh" parent="." instance=ExtResource("23_k3g67")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.04975, 0.560926, 0.184795)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="dock3_remesh"]
transform = Transform3D(-0.8744, 0.469662, -0.121833, 0.246398, 0.213504, -0.945359, -0.417987, -0.856641, -0.302412, -1.63728, -2.92948, 1.48882)
light_energy = 0.09

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(-0.00814527, 1.2191, 0.00407302, -0.672664, -0.00789123, 1.01674, 1.01673, 0.0045457, 0.672698, -13.6118, -4.41036, -8.67722)

[node name="Node3D2" type="Node3D" parent="LeftWall"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Gestein" type="MeshInstance3D" parent="LeftWall/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
material_overlay = SubResource("StandardMaterial3D_k3g67")
mesh = ExtResource("21_to7gp")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("22_u0fll")

[node name="Veins" type="MeshInstance3D" parent="LeftWall/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
mesh = ExtResource("23_6p3nn")
surface_material_override/0 = ExtResource("24_k67gn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
transform = Transform3D(1, 0, -5.96046e-08, 0, 1, 0, 0, 0, 1, 1.57438, -0.818055, 0.261556)
shape = SubResource("BoxShape3D_4bgka")

[node name="preload_4kmaterial" type="MeshInstance3D" parent="."]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 1, -55.3639, 9.50894, -3.007)
visible = false
mesh = SubResource("QuadMesh_k67gn")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("9_7nt27")

[node name="Water" parent="." instance=ExtResource("20_k6f3i")]
transform = Transform3D(-43.6006, 0, 0, 0, 1, 0, 0, 0, 15.708, -14.3034, 0.00877783, 0.808204)
